--- a/src/css/root.css
+++ b/src/css/root.css
@@ -375,97 +375,102 @@
     height: 100%;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
-  #navigation {
-    width: 100%;
-    height: 6.25rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 200000;
-    padding: 0;
-    display: flex;
-    align-items: center;
-  }
-  #navigation .background-color-div {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #fff;
-    height: 0;
-    transition: height .3s;
-  }
-  #navigation .container {
-    max-width: 75rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  #navigation .logo {
-    margin-right: auto;
-    height: 3.75rem;
-    width: auto;
-  }
-  #navigation .logo img {
-    width: auto;
-    height: 100%;
-  }
-  #navigation #navbar-menu ul {
-    padding: 0;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  #navigation #navbar-menu ul li {
-    list-style: none;
-    margin-left: 1.875rem;
-    padding-top: 0.1875rem;
-  }
-  #navigation #navbar-menu ul li a {
-    text-decoration: none;
-    font-weight: bold;
-    /* 14px - 18px */
-    font-size: clamp(0.875rem, 1.5vw, 1.125rem);
-    text-transform: uppercase;
-    position: relative;
-    z-index: 1;
-    color: #fff;
-    transition: color .3s;
-  }
-  #navigation #navbar-menu ul li a:before {
-    content: '';
-    position: absolute;
-    display: block;
-    height: 0.375rem;
-    border-radius: 0.1875rem;
-    background: var(--primary);
-    opacity: 1;
-    bottom: 0.125rem;
-    z-index: -1;
-    left: 0;
-    width: 0%;
-    transition: width .3s;
-  }
-  #navigation #navbar-menu ul li a:hover:before {
-    width: 100%;
-  }
-  #navigation #navbar-menu ul li a.active:before {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 0.375rem;
-    background: var(--primary);
-    opacity: 1;
-    bottom: 0.125rem;
-    border-radius: 0.1875rem;
-    left: 0rem;
-    right: -0.375rem;
-    z-index: -1;
-    transition: bottom .3s;
-  }
-  #navigation .hamburger-menu {
-    display: none;
+  /* Desktop */
+  @media only screen and (min-width: 64em) {
+    #navigation {
+      width: 100%;
+      height: 10.25rem;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 200000;
+      padding: 0;
+      display: flex;
+      align-items: center;
+    }
+    #navigation .background-color-div {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #fff;
+      height: 0;
+      transition: height .3s;
+    }
+    #navigation .container {
+      max-width: 75rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    #navigation .logo {
+      height: 2.5rem; /* Adjust the height as needed */
+      width: auto;
+      display: flex;
+      align-items: center; /* Center the logo vertically */
+    }
+    #navigation .logo img {
+      width: auto;
+      height: 550%;
+    }
+    #navigation #navbar-menu ul {
+      padding: 0;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center; /* Center the navigation items vertically */
+      margin-right: -29rem; /* Add margin to the right */
+    }
+    #navigation #navbar-menu ul li {
+      list-style: none;
+      margin-left: 1.875rem;
+      padding-top: 0.1875rem;
+    }
+    #navigation #navbar-menu ul li a {
+      text-decoration: none;
+      font-weight: bold;
+      /* 14px - 18px */
+      font-size: clamp(0.875rem, 1.5vw, 1.125rem);
+      text-transform: uppercase;
+      position: relative;
+      z-index: 1;
+      color: #fff;
+      transition: color .3s;
+    }
+    #navigation #navbar-menu ul li a:before {
+      content: '';
+      position: absolute;
+      display: block;
+      height: 0.375rem;
+      border-radius: 0.1875rem;
+      background: var(--primary);
+      opacity: 1;
+      bottom: 0.125rem;
+      z-index: -1;
+      left: 0;
+      width: 0%;
+      transition: width .3s;
+    }
+    #navigation #navbar-menu ul li a:hover:before {
+      width: 100%;
+    }
+    #navigation #navbar-menu ul li a.active:before {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 0.375rem;
+      background: var(--primary);
+      opacity: 1;
+      bottom: 0.125rem;
+      border-radius: 0.1875rem;
+      left: 0rem;
+      right: -0.375rem;
+      z-index: -1;
+      transition: bottom .3s;
+    }
+    #navigation .hamburger-menu {
+      display: none;
+    }
   }
 }
 /* Dark Mode Mobile */
