--- a/src/css/root.css
+++ b/src/css/root.css
@@ -180,7 +180,7 @@
   }
   #navigation .logo {
     display: inline-block;
-    height: 1.875rem;
+    height: 4.875rem;
     width: auto;
   }
   #navigation .logo img {
@@ -237,7 +237,7 @@
     width: 80%;
     background: #000;
     opacity: 1;
-    top: 6px;
+    top: 10px;
     left: 0;
     transition: width .3s, left .3s, top .3s, transform .3s;
   }
@@ -266,7 +266,7 @@
     overflow: hidden;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: #fff;
-    top: 3.7rem;
+    top: 6.7rem;
     padding-top: 0;
     height: 0;
     transition: height 0.3s, padding-top 0.3s, top 0.3s;
@@ -319,17 +319,17 @@
     content: '';
     position: absolute;
     display: block;
-    height: 0.5rem;
+    height: .5rem;
     background: var(--primary);
     opacity: 1;
-    bottom: 5rem;
+    bottom: -.5rem;
     border-radius: 0.25rem;
     left: -0.375rem;
     right: -0.375rem;
     z-index: -1;
   }
   #navigation #navbar-menu.open {
-    height: 22.25rem;
+    height: 14rem;
     padding-top: 1.25rem;
     z-index: -100;
   }
